Overflow-y fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
 
 * {
   box-sizing: border-box;
-  touch-action: pan-y;
+  touch-action: none;
+
+  overflow: hidden;
   
 } 
 
